--- a/Modules/Devices/src/Devices.Infrastructure/PushNotifications/Translations/PushNotifications.Translations.IPushNotificationResource.en.resx
+++ b/Modules/Devices/src/Devices.Infrastructure/PushNotifications/Translations/PushNotifications.Translations.IPushNotificationResource.en.resx
@@ -118,15 +118,51 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DatawalletModificationsCreatedPushNotification.Body" xml:space="preserve">
-    <value>Criadas para a sua identidade.</value>
+    <value>Datawallet modification were created for your identity.</value>
   </data>
   <data name="DatawalletModificationsCreatedPushNotification.Title" xml:space="preserve">
-    <value>Criadas</value>
+    <value>Datawallet modifications created</value>
   </data>
   <data name="DeletionProcessApprovedNotification.Body" xml:space="preserve">
     <value>One of your identity's deletion processes was approved and will be processed shortly.</value>
   </data>
   <data name="DeletionProcessApprovedNotification.Title" xml:space="preserve">
-    <value>Processo de eliminação aprovado</value>
+    <value>A deletion process has been approved</value>
+  </data>
+  <data name="DeletionProcessGracePeriodReminderPushNotification.Body" xml:space="preserve">
+    <value>Your Identity will be deleted in a few days. You can still cancel up to this point.</value>
+  </data>
+  <data name="DeletionProcessGracePeriodReminderPushNotification.Title" xml:space="preserve">
+    <value>Your Identity will be deleted</value>
+  </data>
+  <data name="DeletionProcessStartedPushNotification.Body" xml:space="preserve">
+    <value>A Deletion Process was started for your Identity.</value>
+  </data>
+  <data name="DeletionProcessStartedPushNotification.Title" xml:space="preserve">
+    <value>Deletion process started</value>
+  </data>
+  <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Body" xml:space="preserve">
+    <value>There is a deletion process for your identity that waits for your approval. If you don't approve it within a few days, the process will be terminated.</value>
+  </data>
+  <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Title" xml:space="preserve">
+    <value>Deletion process waiting for approval</value>
+  </data>
+  <data name="DeletionStartsPushNotification.Body" xml:space="preserve">
+    <value />
+  </data>
+  <data name="DeletionStartsPushNotification.Title" xml:space="preserve">
+    <value>Your identity is now deleted</value>
+  </data>
+  <data name="ExternalEventCreatedPushNotification.Body" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ExternalEventCreatedPushNotification.Title" xml:space="preserve">
+    <value />
+  </data>
+  <data name="TestPushNotification.Body" xml:space="preserve">
+    <value>This is a Test push notification.</value>
+  </data>
+  <data name="TestPushNotification.Title" xml:space="preserve">
+    <value>Test</value>
   </data>
 </root>
