feat: move all texts to l10n file

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -1,7 +1,104 @@
 {
-    "@@locale": "en",
-    "cancel": "Cancel",
-    "close": "Close",
-    "save": "Save",
-    "yes": "Yes"
+  "@@locale": "en",
+  "add": "Add",
+  "addQuota": "Add Quota",
+  "address": "Address",
+  "listOfExistingClients": "A list of existing Clients",
+  "listOfExistingIdentities": "A list of existing Identities",
+  "listOfAllTiers": "A list of all Tiers",
+  "backboneAdminUI": " Backbone AdminUI",
+  "cancel": "Cancel",
+  "close": "Close",
+  "confirm": "Confirm",
+  "createdWithClient": "Created with Client",
+  "createdAt": "Created At",
+  "clients": "Clients",
+  "changeClientSecret": "Change Client Secret",
+  "clientSecret": "Client Secret",
+  "clientSecretMessage": "A Client Secret will be generated if this field is left blank.",
+  "copyToClipboard": "Copy to clipboard",
+  "copyToClipboardMessage": "Client Secret copied to clipboard.",
+  "createClient": "Create Client",
+  "clientID": "Client ID",
+  "clientIDMessage": "A Client ID will be generated if this field is left blank.",
+  "changeTier": "Change Tier",
+  "copyPublicKey": "Copy public key",
+  "createTier": "Create Tier",
+  "create": "Create",
+  "day": "Day",
+  "dark": "Dark",
+  "dataException": "Failed to load data",
+  "dataLoadingError": "An error occurred loading the data.",
+  "datawalletVersion": "Datawallet Version",
+  "deletionOfQuotaMessage": "Are you sure you want to remove the selected quotas from",
+  "displayName": "Display Name",
+  "displayNameMessage": "Client ID will be used as a Display Name if no value is provided.",
+  "defaultTier": "Default Tier",
+  "exclusiveTierIdOrAddress": "Only one of tierId or address can be provided",
+  "emptyIdentityMessage": "No identities found.",
+  "enmeshed": "enmeshed",
+  "errorOccurrence": "An error occurred while deleting the quota(s). Please try again.",
+  "errorOccurredDeletingClient": "An error occurred while deleting the client(s). Please try again.",
+  "editProvidedMessage": "If edit is provided, icon and tooltipMessage must be provided too.",
+  "failedToUpdateIdentityMessage": "Failed to update identity. Please try again.",
+  "formMessageForTier": "Please fill the form below to create your Tier",
+  "helperMaxAmount": "Only numbers greater or equal to 0 are valid.",
+  "hour": "Hour",
+  "invalidState": "Invalid State",
+  "identityVersion": "Identity Version",
+  "individual": "Individual",
+  "identityUpdatedMessage": "Identity updated successfully.",
+  "identityCopiedToClipboardMessage": "Identity address copied to clipboard.",
+  "id": "ID: ",
+  "identities": "Identities",
+  "light": "Light",
+  "lastLoginAt": "Last Login at",
+  "metric": "Metric*",
+  "maxAmount": "Max Amount",
+  "month": "Month",
+  "maxIdentities": "Max Identities",
+  "maxIdentitiesMessage": "The maximum number of Identities that can be created with this Client.",
+  "max": "Max",
+  "numberOfDevices": "Number of Devices",
+  "noIdentityLimitMessage": "No Identity limit will be assigned if this field is left blank.",
+  "numberOfIdentities": "Number of Identities",
+  "noClientsFound": "No clients found.",
+  "noTiersFound": "No tiers found.",
+  "noQuotasAppliedForIdentity": "No quotas applied for this identity.",
+  "noQuotasAddedForTier": "No quotas added to this tier.",
+  "name": "Name: ",
+  "nameCannotBeEmptyMessage": "Name cannot be empty.",
+  "period": "Period",
+  "publicKey": "Public Key",
+  "publicKeyCopiedToClipboardMessage": "Public key copied to clipboard.",
+  "quotas": "Quotas",
+  "requirementOfTierIdOrAddress": "Either tierId or address must be provided",
+  "retry": "Retry",
+  "removeQuota": "Remove Quota",
+  "removeClients": "Remove Clients",
+  "removeClientsMessage": "Are you sure you want to remove the selected clients?",
+  "settings": "Settings",
+  "system": "System",
+  "searchTiers": "Search Tiers",
+  "searchClients": "Search Clients",
+  "save": "Save",
+  "selectedQuotaWasRemoved": "Selected quota(s) have been removed.",
+  "selectedClientsWereRemovedMessage": "Selected clients have been removed.",
+  "source": "Source",
+  "saveTheClientSecretMessage": "Please save the Client Secret since it will be inaccessible after exiting.",
+  "theme": "Theme",
+  "tiers": "Tiers",
+  "tier": "Tier",
+  "theIdentity": "the identity",
+  "theTier": "the tier",
+  "tierQuotaEffectMessage": "Tier quotas do not take effect if there is an individual quota.",
+  "tierCreatedSuccessfullyMessage": "Tier was created successfully.",
+  "usage": "Usage (Used/Max)",
+  "viewAndAssignQuotasForIdentity": "View and assign quotas for this identity.",
+  "viewQuotasForTheTier": "View quotas for this tier. This tier is managed by the system and therefore read-only.",
+  "viewAndAssignQuotasForTier": "View and assign quotas for this tier.",
+  "viewIdentitiesAssociatedWithTier": "View Identities associated with this Tier.",
+  "week": "Week",
+  "yes": "Yes",
+  "year": "Year"
 }
