fix: change from camel case to underscore notation

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -6,33 +6,33 @@
   "cancel": "Cancel",
   "changeClientSecret": "Change Client Secret",
   "changeTier": "Change Tier",
-  "clientID": "Client ID",
-  "clientSecret": "Client Secret",
+  "client_ID": "Client ID",
+  "client_secret": "Client Secret",
   "clients": "Clients",
   "close": "Close",
   "confirm": "Confirm",
-  "copyPublicKey": "Copy public key",
-  "copyToClipboard": "Copy to clipboard",
+  "copy_public_key": "Copy public key",
+  "copy_to_clipboard": "Copy to clipboard",
   "create": "Create",
   "createdAt": "Created At",
-  "createdWithClient": "Created with Client",
+  "created_with_client": "Created with Client",
   "dark": "Dark",
   "day": "Day",
-  "defaultTier": "Default Tier",
-  "displayName": "Display Name",
+  "default_tier": "Default Tier",
+  "display_name": "Display Name",
   "hour": "Hour",
   "id": "ID: ",
   "identities": "Identities",
   "individual": "Individual",
-  "invalidState": "Invalid State",
-  "lastLoginAt": "Last Login at",
+  "invalid_state": "Invalid State",
+  "last_login_at": "Last Login at",
   "light": "Light",
   "max": "Max",
   "metric": "Metric*",
   "month": "Month",
   "name": "Name: ",
   "period": "Period",
-  "publicKey": "Public Key",
+  "public_key": "Public Key",
   "quotas": "Quotas",
   "retry": "Retry",
   "save": "Save",
@@ -40,7 +40,7 @@
   "source": "Source",
   "system": "System",
   "theIdentity": "the identity",
-  "theTier": "the tier",
+  "the_tier": "the tier",
   "theme": "Theme",
   "tier": "Tier",
   "tiers": "Tiers",
@@ -50,26 +50,26 @@
   "yes": "Yes",
   "error_data_load_failed": "Failed to load data",
   "error_loading_data": "An error occurred loading the data.",
-  "noQuotasAppliedForIdentity": "No quotas applied for this identity.",
-  "noQuotasAddedForTier": "No quotas added to this tier.",
-  "copyToClipboardMessage": "Client Secret copied to clipboard.",
-  "deletionOfQuotaMessage": "Are you sure you want to remove the selected quotas from",
-  "displayNameMessage": "Client ID will be used as a Display Name if no value is provided.",
-  "failedToUpdateIdentityMessage": "Failed to update identity. Please try again.",
-  "formMessageForTier": "Please fill the form below to create your Tier",
-  "identityCopiedToClipboardMessage": "Identity address copied to clipboard.",
-  "identityUpdatedMessage": "Identity updated successfully.",
-  "maxIdentitiesMessage": "The maximum number of Identities that can be created with this Client.",
-  "maxAmountMessage": "Only numbers greater or equal to 0 are valid.",
-  "nameCannotBeEmptyMessage": "Name cannot be empty.",
-  "noIdentityLimitMessage": "No Identity limit will be assigned if this field is left blank.",
-  "publicKeyCopiedToClipboardMessage": "Public key copied to clipboard.",
-  "removeClientsMessage": "Are you sure you want to remove the selected clients?",
-  "saveTheClientSecretMessage": "Please save the Client Secret since it will be inaccessible after exiting.",
-  "tierCreatedSuccessfullyMessage": "Tier was created successfully.",
-  "tierQuotaEffectMessage": "Tier quotas do not take effect if there is an individual quota.",
-  "viewQuotasForTheTier": "View quotas for this tier. This tier is managed by the system and therefore read-only.",
-  "viewIdentitiesAssociatedWithTier": "View Identities associated with this Tier.",
+  "no_quotas_applied_for_identity": "No quotas applied for this identity.",
+  "no_quotas_added_for_tier": "No quotas added to this tier.",
+  "copy_to_clipboard_message": "Client Secret copied to clipboard.",
+  "deletion_of_quota_message": "Are you sure you want to remove the selected quotas from",
+  "display_name_message": "Client ID will be used as a Display Name if no value is provided.",
+  "failed_to_update_identity_message": "Failed to update identity. Please try again.",
+  "form_message_for_tier": "Please fill the form below to create your Tier",
+  "identity_copied_to_clipboard_message": "Identity address copied to clipboard.",
+  "identity_updated_message": "Identity updated successfully.",
+  "max_identities_message": "The maximum number of Identities that can be created with this Client.",
+  "max_amount_message": "Only numbers greater or equal to 0 are valid.",
+  "name_cannot_be_empty_message": "Name cannot be empty.",
+  "no_identity_limit_message": "No Identity limit will be assigned if this field is left blank.",
+  "public_key_copied_to_clipboard_message": "Public key copied to clipboard.",
+  "remove_clients_message": "Are you sure you want to remove the selected clients?",
+  "save_the_client_secret_message": "Please save the Client Secret since it will be inaccessible after exiting.",
+  "tier_created_successfully_message": "Tier was created successfully.",
+  "tier_quota_effect_message": "Tier quotas do not take effect if there is an individual quota.",
+  "view_quotas_for_the_tier": "View quotas for this tier. This tier is managed by the system and therefore read-only.",
+  "view_identities_associated_with_tier": "View Identities associated with this Tier.",
   "createEntity": "Create {entityName}",
   "@createEntity": {
     "placeholders": {
