fix: remove signs from translation

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -21,15 +21,15 @@
   "default_tier": "Default Tier",
   "display_name": "Display Name",
   "hour": "Hour",
-  "id": "ID: ",
+  "id": "ID",
   "identities": "Identities",
   "individual": "Individual",
   "last_login_at": "Last Login at",
   "light": "Light",
   "max": "Max",
-  "metric": "Metric*",
+  "metric": "Metric",
   "month": "Month",
-  "name": "Name: ",
+  "name": "Name",
   "period": "Period",
   "public_key": "Public Key",
   "quotas": "Quotas",
