chore: rename buttons and title

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -1,7 +1,9 @@
 {
     "@@locale": "en",
+    "assign": "Assign",
     "cancel": "Cancel",
     "close": "Close",
+    "create": "Create",
     "save": "Save",
     "yes": "Yes"
 }
