--- a/Modules/Devices/src/Devices.Infrastructure/Translations/Resources.resx
+++ b/Modules/Devices/src/Devices.Infrastructure/Translations/Resources.resx
@@ -1,180 +1,180 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
+    <!-- 
+      Microsoft ResX Schema 
+      
+      Version 2.0
+      
+      The primary goals of this format is to allow a simple XML format 
+      that is mostly human readable. The generation and parsing of the 
+      various data types are done through the TypeConverter classes 
+      associated with the data types.
+      
+      Example:
+      
+      ... ado.net/XML headers & schema ...
+      <resheader name="resmimetype">text/microsoft-resx</resheader>
+      <resheader name="version">2.0</resheader>
+      <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+      <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+      <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+      <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+      <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+          <value>[base64 mime encoded serialized .NET Framework object]</value>
+      </data>
+      <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+          <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+          <comment>This is a comment</comment>
+      </data>
+                  
+      There are any number of "resheader" rows that contain simple 
+      name/value pairs.
+      
+      Each data row contains a name, and value. The row also contains a 
+      type or mimetype. Type corresponds to a .NET class that support 
+      text/value conversion through the TypeConverter architecture. 
+      Classes that don't support this are serialized and stored with the 
+      mimetype set.
+      
+      The mimetype is used for serialized objects, and tells the 
+      ResXResourceReader how to depersist the object. This is currently not 
+      extensible. For a given mimetype the value must be set accordingly:
+      
+      Note - application/x-microsoft.net.object.binary.base64 is the format 
+      that the ResXResourceWriter will generate, however the reader can 
+      read any of the formats listed below.
+      
+      mimetype: application/x-microsoft.net.object.binary.base64
+      value   : The object must be serialized with 
+              : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+              : and then encoded with base64 encoding.
+      
+      mimetype: application/x-microsoft.net.object.soap.base64
+      value   : The object must be serialized with 
+              : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+              : and then encoded with base64 encoding.
+  
+      mimetype: application/x-microsoft.net.object.bytearray.base64
+      value   : The object must be serialized into a byte array 
+              : using a System.ComponentModel.TypeConverter
+              : and then encoded with base64 encoding.
+      -->
+    <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root" xmlns="">
+        <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
+        <xsd:element name="root" msdata:IsDataSet="true">
             <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
+                <xsd:choice maxOccurs="unbounded">
+                    <xsd:element name="metadata">
+                        <xsd:complexType>
+                            <xsd:sequence>
+                                <xsd:element name="value" type="xsd:string" minOccurs="0"/>
+                            </xsd:sequence>
+                            <xsd:attribute name="name" use="required" type="xsd:string"/>
+                            <xsd:attribute name="type" type="xsd:string"/>
+                            <xsd:attribute name="mimetype" type="xsd:string"/>
+                            <xsd:attribute ref="xml:space"/>
+                        </xsd:complexType>
+                    </xsd:element>
+                    <xsd:element name="assembly">
+                        <xsd:complexType>
+                            <xsd:attribute name="alias" type="xsd:string"/>
+                            <xsd:attribute name="name" type="xsd:string"/>
+                        </xsd:complexType>
+                    </xsd:element>
+                    <xsd:element name="data">
+                        <xsd:complexType>
+                            <xsd:sequence>
+                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
+                                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2"/>
+                            </xsd:sequence>
+                            <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1"/>
+                            <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3"/>
+                            <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4"/>
+                            <xsd:attribute ref="xml:space"/>
+                        </xsd:complexType>
+                    </xsd:element>
+                    <xsd:element name="resheader">
+                        <xsd:complexType>
+                            <xsd:sequence>
+                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
+                            </xsd:sequence>
+                            <xsd:attribute name="name" type="xsd:string" use="required"/>
+                        </xsd:complexType>
+                    </xsd:element>
+                </xsd:choice>
             </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <data name="DatawalletModificationsCreatedPushNotification.Body" xml:space="preserve">
-    <value>Datawallet modification were created for your identity.</value>
+        </xsd:element>
+    </xsd:schema>
+    <resheader name="resmimetype">
+        <value>text/microsoft-resx</value>
+    </resheader>
+    <resheader name="version">
+        <value>2.0</value>
+    </resheader>
+    <resheader name="reader">
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    </resheader>
+    <resheader name="writer">
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    </resheader>
+    <data name="DatawalletModificationsCreatedPushNotification.Body" xml:space="preserve">
+      <value>New updates are available in the app.</value>
   </data>
-  <data name="DatawalletModificationsCreatedPushNotification.Title" xml:space="preserve">
-    <value>Datawallet modifications created</value>
+    <data name="DatawalletModificationsCreatedPushNotification.Title" xml:space="preserve">
+      <value>Updates available</value>
   </data>
-  <data name="DeletionProcessApprovedNotification.Body" xml:space="preserve">
-    <value>One of your identity's deletion processes was approved and will be processed shortly.</value>
+    <data name="DeletionProcessApprovedNotification.Body" xml:space="preserve">
+      <value>A deletion process of one of your identities has been was approved and will be processed shortly.</value>
   </data>
-  <data name="DeletionProcessApprovedNotification.Title" xml:space="preserve">
+    <data name="DeletionProcessApprovedNotification.Title" xml:space="preserve">
     <value>A deletion process has been approved</value>
   </data>
-  <data name="DeletionProcessCancelledByOwnerNotification.Body" xml:space="preserve">
-    <value>One of your identity's deletion processes was cancelled by you.</value>
+    <data name="DeletionProcessCancelledByOwnerNotification.Body" xml:space="preserve">
+      <value>A deletion process of one of your identities has been cancelled by you.</value>
   </data>
-  <data name="DeletionProcessCancelledByOwnerNotification.Title" xml:space="preserve">
+    <data name="DeletionProcessCancelledByOwnerNotification.Title" xml:space="preserve">
     <value>A deletion process has been cancelled</value>
   </data>
-  <data name="DeletionProcessCancelledBySupportNotification.Body" xml:space="preserve">
-    <value>One of your identity's deletion processes was cancelled by the support team.</value>
+    <data name="DeletionProcessCancelledBySupportNotification.Body" xml:space="preserve">
+      <value>A deletion process of one of your identities has been cancelled by our support team.</value>
   </data>
-  <data name="DeletionProcessCancelledBySupportNotification.Title" xml:space="preserve">
+    <data name="DeletionProcessCancelledBySupportNotification.Title" xml:space="preserve">
     <value>A deletion process has been cancelled</value>
   </data>
-  <data name="DeletionProcessGracePeriodReminderPushNotification.Body" xml:space="preserve">
+    <data name="DeletionProcessGracePeriodReminderPushNotification.Body" xml:space="preserve">
     <value>Your Identity will be deleted in a few days. You can still cancel up to this point.</value>
   </data>
-  <data name="DeletionProcessGracePeriodReminderPushNotification.Title" xml:space="preserve">
+    <data name="DeletionProcessGracePeriodReminderPushNotification.Title" xml:space="preserve">
     <value>Your Identity will be deleted</value>
   </data>
-  <data name="DeletionProcessStartedPushNotification.Body" xml:space="preserve">
-    <value>A Deletion Process was started for your Identity.</value>
+    <data name="DeletionProcessStartedPushNotification.Body" xml:space="preserve">
+      <value>A Deletion Process was started for one of your identities.</value>
   </data>
-  <data name="DeletionProcessStartedPushNotification.Title" xml:space="preserve">
+    <data name="DeletionProcessStartedPushNotification.Title" xml:space="preserve">
     <value>Deletion process started</value>
   </data>
-  <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Body" xml:space="preserve">
-    <value>There is a deletion process for your identity that waits for your approval. If you don't approve it within a few days, the process will be terminated.</value>
+    <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Body" xml:space="preserve">
+      <value>There is a deletion process for your identity that waits for your approval. If you don't approve it within a few days, the process will be cancelled.</value>
   </data>
-  <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Title" xml:space="preserve">
+    <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Title" xml:space="preserve">
     <value>Deletion process waiting for approval</value>
   </data>
-  <data name="DeletionStartsPushNotification.Body" xml:space="preserve">
-    <value>A deletion was executed</value>
+    <data name="DeletionStartsPushNotification.Body" xml:space="preserve">
+      <value>The deletion of your identity is now complete.</value>
   </data>
-  <data name="DeletionStartsPushNotification.Title" xml:space="preserve">
+    <data name="DeletionStartsPushNotification.Title" xml:space="preserve">
     <value>Your identity is now deleted</value>
   </data>
-  <data name="ExternalEventCreatedPushNotification.Body" xml:space="preserve">
-    <value>New updates are available in the Enmeshed app</value>
+    <data name="ExternalEventCreatedPushNotification.Body" xml:space="preserve">
+      <value>New updates are available in the app.</value>
   </data>
-  <data name="ExternalEventCreatedPushNotification.Title" xml:space="preserve">
-    <value>Update Received</value>
+    <data name="ExternalEventCreatedPushNotification.Title" xml:space="preserve">
+      <value>Updates available</value>
   </data>
-  <data name="TestPushNotification.Body" xml:space="preserve">
+    <data name="TestPushNotification.Body" xml:space="preserve">
     <value>This is a Test push notification.</value>
   </data>
-  <data name="TestPushNotification.Title" xml:space="preserve">
+    <data name="TestPushNotification.Title" xml:space="preserve">
     <value>Test</value>
   </data>
 </root>
