--- a/Modules/Devices/src/Devices.Infrastructure/Translations/Resources.pt.resx
+++ b/Modules/Devices/src/Devices.Infrastructure/Translations/Resources.pt.resx
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DatawalletModificationsCreatedPushNotification.Body" xml:space="preserve">
-    <value>Foram criadas Modificações de Datawallet para a sua identidade.</value>
+    <value>Há atualizações disponíveis na aplicação.</value>
   </data>
   <data name="DatawalletModificationsCreatedPushNotification.Title" xml:space="preserve">
-    <value>Modificações de Datawallet Criadas</value>
+    <value>Atualizações Disponíveis</value>
   </data>
   <data name="DeletionProcessApprovedNotification.Body" xml:space="preserve">
-    <value>Um dos processos de eliminação da sua identidade foi aprovado e será processado brevemente.</value>
+    <value>Um dos processos de eliminação de uma das suas identidades foi aprovado e será processado brevemente.</value>
   </data>
   <data name="DeletionProcessApprovedNotification.Title" xml:space="preserve">
     <value>Processo de eliminação aprovado</value>
@@ -136,13 +136,13 @@
     <value>Teste</value>
   </data>
   <data name="DeletionProcessCancelledByOwnerNotification.Body" xml:space="preserve">
-    <value>Um dos seus processos de eliminação de identidade foi cancelado por si.</value>
+    <value>Um dos processos de eliminação de uma das suas identidades foi cancelado por si.</value>
   </data>
   <data name="DeletionProcessCancelledByOwnerNotification.Title" xml:space="preserve">
     <value>Um processo de eliminação foi cancelado</value>
   </data>
   <data name="DeletionProcessCancelledBySupportNotification.Body" xml:space="preserve">
-    <value>Um dos processos de eliminação da sua identidade foi cancelado pela equipa de suporte.</value>
+    <value>Um dos processos de eliminação de uma das suas identidades foi cancelado pela equipa de suporte.</value>
   </data>
   <data name="DeletionProcessCancelledBySupportNotification.Title" xml:space="preserve">
     <value>Um processo de eliminação foi cancelado</value>
@@ -154,25 +154,25 @@
     <value>A sua identidade será excluída</value>
   </data>
   <data name="DeletionProcessStartedPushNotification.Body" xml:space="preserve">
-    <value>Um processo de eliminação foi iniciado para a sua identidade.</value>
+    <value>Um processo de eliminação foi iniciado para uma das suas identidades.</value>
   </data>
   <data name="DeletionProcessStartedPushNotification.Title" xml:space="preserve">
     <value>O processo de eliminação foi iniciado</value>
   </data>
   <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Body" xml:space="preserve">
-    <value>Há um processo de eliminação para a sua identidade que aguarda a sua aprovação. Se não o aprovar dentro de alguns dias, o processo será encerrado.</value>
+    <value>Há um processo de eliminação para a sua identidade que aguarda a sua aprovação. Se não o aprovar dentro de alguns dias, o processo será cancelado.</value>
   </data>
   <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Title" xml:space="preserve">
     <value>Processo de eliminação a aguardar aprovação</value>
   </data>
   <data name="DeletionStartsPushNotification.Body" xml:space="preserve">
-    <value>Foi execuação a eliminação</value>
+    <value>A eliminação da sua identidade foi concluída.</value>
   </data>
   <data name="DeletionStartsPushNotification.Title" xml:space="preserve">
-    <value>A sua identidade foi eliminada!</value>
+    <value>A sua identidade foi eliminada</value>
   </data>
   <data name="ExternalEventCreatedPushNotification.Body" xml:space="preserve">
-    <value>Estão disponíveis novas atualizações na aplicação Enmeshed!</value>
+    <value>Estão disponíveis novas atualizações na aplicação.</value>
   </data>
   <data name="ExternalEventCreatedPushNotification.Title" xml:space="preserve">
     <value>Atualização recebida</value>
