fix: make text translatable

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -3,12 +3,16 @@
   "add": "Add",
   "addQuota": "Add Quota",
   "address": "Address",
+  "amount": "Amount",
   "cancel": "Cancel",
   "changeClientSecret": "Change Client Secret",
   "changeTier": "Change Tier",
   "client_ID": "Client ID",
   "client_secret": "Client Secret",
+  "client": "Client",
   "clients": "Clients",
+  "clients_lc": "clients",
+  "client_lc": "client",
   "close": "Close",
   "confirm": "Confirm",
   "copy_public_key": "Copy public key",
@@ -18,11 +22,14 @@
   "created_with_client": "Created with Client",
   "dark": "Dark",
   "day": "Day",
+  "datawallet": "Datawallet",
   "default_tier": "Default Tier",
+  "devices": "Devices",
   "display_name": "Display Name",
   "hour": "Hour",
   "id": "ID",
   "identities": "Identities",
+  "identity": "Identity",
   "individual": "Individual",
   "last_login_at": "Last Login at",
   "light": "Light",
@@ -42,8 +49,13 @@
   "the_tier": "the tier",
   "theme": "Theme",
   "tier": "Tier",
+  "tier_lc": "tier",
   "tiers": "Tiers",
-  "usage": "Usage (Used/Max)",
+  "tiers_lc": "tiers",
+  "usage": "Usage",
+  "used": "Used",
+  "quotas": "Quotas",
+  "quota_lc": "quota",
   "week": "Week",
   "year": "Year",
   "yes": "Yes",
